--- a/assets/navbar.html
+++ b/assets/navbar.html
@@ -1,6 +1,6 @@
 <nav id="navbar">
   <div class="nav-container">
-    <a href="/Homepage/index.html" class="logo">
+    <a href="../index.html" class="logo">
       <img src="/assets/images/logo.png" alt="MUSELABS Logo">
     </a>
 
