update in routing
fixing more shit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="carousel-text">
           <h2>Music Tuition</h2>
           <p>Learn music affordably with our expert tutors.</p>
-          <a href="../tuition/tuition.html" class="btn">Explore Tuition</a>
+          <a href="tuition/tuition.html" class="btn">Explore Tuition</a>
         </div>
       </div>
 
@@ -34,7 +34,7 @@
         <div class="carousel-text">
           <h2>Event Audio</h2>
           <p>Professional sound services for any event.</p>
-          <a href="../event-audio/event-audio.html" class="btn">Explore Event Audio</a>
+          <a href="event-audio/event-audio.html" class="btn">Explore Event Audio</a>
         </div>
       </div>
 
@@ -43,7 +43,7 @@
         <div class="carousel-text">
           <h2>Event Management</h2>
           <p>We organize unforgettable music events.</p>
-          <a href="../coming_soon/coming_soon.html" class="btn">Explore Event Management</a>
+          <a href="coming_soon/coming_soon.html" class="btn">Explore Event Management</a>
         </div>
       </div>
 
