some more fixes
im fucking tired bro

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MUSELABS | Home</title>
 
   <!-- Navbar -->
-  <link rel="stylesheet" href="../assets/navbar.css" />
+  <link rel="stylesheet" href="assets/navbar.css" />
 
   <!-- Homepage styles -->
   <link rel="stylesheet" href="index.css" />
@@ -65,7 +65,7 @@
         document.getElementById("navbar-placeholder").innerHTML = data;
 
         const script = document.createElement("script");
-        script.src = "../assets/navbar.js";
+        script.src = "assets/navbar.js";
         document.body.appendChild(script);
       });
   </script>
@@ -105,7 +105,7 @@
       // load footer CSS dynamically (optional)
       const link = document.createElement('link');
       link.rel = 'stylesheet';
-      link.href = '/assets/footer.css';
+      link.href = 'assets/footer.css';
       document.head.appendChild(link);
     });
 </script>
