some more fixes
niggah i want to sleep

--- a/assets/navbar.html
+++ b/assets/navbar.html
@@ -1,7 +1,7 @@
 <nav id="navbar">
   <div class="nav-container">
     <a href="../index.html" class="logo">
-      <img src="/assets/images/logo.png" alt="MUSELABS Logo">
+      <img src="images/logo.png" alt="MUSELABS Logo">
     </a>
 
     <div class="hamburger" id="hamburger">
@@ -13,7 +13,7 @@
     <ul class="nav-links" id="nav-links">
       <li><a href="../tuition/tuition.html">Tuition</a></li>
       <li><a href="../event-audio/event-audio.html">Event Audio</a></li>
-      <li><a href="/coming_soon/coming_soon.html">Event Management</a></li>
+      <li><a href="../coming_soon/coming_soon.html">Event Management</a></li>
       <li><a href="../contact-us/contact-us.html">Contact Us</a></li>
     </ul>
   </div>
