--- a/index.html
+++ b/index.html
@@ -59,14 +59,18 @@
 
   <!-- Navbar fetch + JS -->
   <script>
-    fetch("/assets/navbar.html")
+    fetch("../assets/navbar.html")
       .then(res => res.text())
       .then(data => {
         document.getElementById("navbar-placeholder").innerHTML = data;
 
         const script = document.createElement("script");
-        script.src = "/assets/navbar.js";
+        script.src = "../assets/navbar.js";
         document.body.appendChild(script);
+              const link = document.createElement('link');
+      link.rel = 'stylesheet';
+      link.href = '../assets/navbar.css';
+      document.head.appendChild(link);
       });
   </script>
 
@@ -97,7 +101,7 @@
 <div id="footer-placeholder"></div>
 
 <script>
-  fetch("/assets/footer.html")
+  fetch("../assets/footer.html")
     .then(res => res.text())
     .then(data => {
       document.getElementById("footer-placeholder").innerHTML = data;
